--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^2.11",
+        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/orm": "^2.17",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
@@ -17,6 +20,7 @@
         "symfony/yaml": "6.3.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.51"
     },
     "config": {
         "allow-plugins": {
