Criado LoginController com metodos Criar e Deletar usuario

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,6 +17,9 @@ security:
             lazy: true
             provider: app_user_provider
 
+            json_login:
+                check_path: api_login
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
